crates/nx-syntax/tests/fixtures/invalid/incomplete_expression.nx
// Incomplete expression - missing right-hand side
let x =
